--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -148,7 +148,7 @@ section {
 /* -- CARD GRID -- */
 .grid {
     display: grid;
-    grid-template-rows: repeat(auto, 1fr);
+    grid-template-rows: 1fr;
     gap: $sp-5;
 }
 
