--- a/styles/styles.css
+++ b/styles/styles.css
@@ -145,7 +145,7 @@ section {
 /* -- CARD GRID -- */
 .grid {
   display: grid;
-  grid-template-rows: repeat(auto, 1fr);
+  grid-template-rows: 1fr;
   gap: 1.5rem;
 }
 
